@@ -19,6 +19,12 @@ breaking changes (such as renamed commands) can happen in minor releases.
 v2.1.0 (unreleased)
 -------------------
 
+Added
+~~~~~
+
+- New `:screenshot` command which can be used to screenshot the visible part of
+  the page.
+
 Changed
 ~~~~~~~
 
